syntax = "proto3";

package notificationpb;

import "notificationpb/message.proto";

service NotificationService {
    rpc CreateNotification (CreateNotificationRequest) returns (Notification);
    rpc UpdateNotification (UpdateNotificationRequest) returns (Notification);
    rpc DeleteNotification (DeleteNotificationRequest) returns (Notification);
    rpc GetNotifications (GetNotificationsRequest) returns (GetNotificationsResponse);
    rpc GetNotificationById (GetNotificationByIdRequest) returns (Notification);
    rpc GetNotificationsByStatus (GetNotificationsByStatusRequest) returns (GetNotificationsByStatusResponse);
    rpc GetNotificationsByType (GetNotificationsByTypeRequest) returns (GetNotificationsByTypeResponse);
}

message CreateNotificationRequest {
    string subject = 1;
    string content = 2;
    string sender_name = 3;
    string sender_email = 4;
    string recipient_email = 5;
    string recipient_name = 6;
    EmailStatus status = 7;
    NotificationType type = 8;
}

message UpdateNotificationRequest {
    string id = 1;
    string subject = 2;
    string content = 3;
    string sender_name = 4;
    string sender_email = 5;
    string recipient_email = 6;
    string recipient_name = 7;
    EmailStatus status = 8;
    NotificationType type = 9;
}

message DeleteNotificationRequest {
    string id = 1;
}

message GetNotificationsRequest {
    repeated Notification notifications = 1;
}

message GetNotificationsResponse {
    repeated Notification notifications = 1;
}

message GetNotificationByIdRequest {
    string id = 1;
}

message GetNotificationsByStatusRequest {
    EmailStatus status = 1;
}

message GetNotificationsByStatusResponse {
    repeated Notification notifications = 1;
}

message GetNotificationsByTypeRequest {
    NotificationType type = 1;
}

message GetNotificationsByTypeResponse {
    repeated Notification notifications = 1;
}
